--- a/front-end/src/components/atoms/RoomDisplay/RoomDisplay.css
+++ b/front-end/src/components/atoms/RoomDisplay/RoomDisplay.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     border: 2px solid gray;
+    border-radius: 4px;
     width: 150px;
 }
 
@@ -18,4 +19,9 @@
 .room-display-styles .dropdown-container-styles {
     display: flex;
     justify-content: center;
+    width: 100%;
+}
+
+.room-display-styles .dropdown-container-styles.disabled {
+    background-color: gray;
 }
