--- a/front-end/src/components/atoms/Button/Button.css
+++ b/front-end/src/components/atoms/Button/Button.css
@@ -5,3 +5,7 @@
     background: linear-gradient(to bottom, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%, rgba(102,102,102,1) 25%, rgba(71,71,71,1) 39%, rgba(43,43,43,1) 71%, rgba(0,0,0,1) 93%, rgba(17,17,17,1) 95%, rgba(28,28,28,1) 100%);
     font-weight: 800;
 }
+
+@media only screen and (max-width: 200px) {
+    background-color: blue;
+}
