--- a/front-end/src/components/atoms/Button/Button.css
+++ b/front-end/src/components/atoms/Button/Button.css
@@ -6,6 +6,8 @@
     font-weight: 800;
 }
 
-@media only screen and (max-width: 200px) {
-    background-color: blue;
+@media only screen and (min-width: 600px) {
+    .buttonstyles {
+        background-color: blue;
+    }
 }
